crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_empty_tstring.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
snapshot_kind: text
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(None),
            range: 0..3,
            value: TString(
                ExprTString {
                    node_index: NodeIndex(None),
                    range: 0..3,
                    value: TStringValue {
                        inner: Single(
                            TString {
                                range: 0..3,
                                node_index: NodeIndex(None),
                                elements: [],
                                flags: TStringFlags {
                                    quote_style: Double,
                                    prefix: Regular,
                                    triple_quoted: false,
                                    unclosed: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
